apps/00-infra/reloader/base/manifests.yaml
---
# Source: reloader/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    meta.helm.sh/release-namespace: tools
    meta.helm.sh/release-name: reloader
  labels:
    app: reloader-reloader
    release: reloader
    app.kubernetes.io/name: reloader
    app.kubernetes.io/instance: reloader
    helm.sh/chart: reloader-2.2.7
    chart: reloader-2.2.7
    heritage: Helm
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: v1.4.12
  name: reloader-reloader
  namespace: tools
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: reloader-reloader
      release: reloader
  template:
    metadata:
      labels:
        app: reloader-reloader
        release: reloader
        app.kubernetes.io/name: reloader
        app.kubernetes.io/instance: reloader
        helm.sh/chart: reloader-2.2.7
        chart: reloader-2.2.7
        heritage: Helm
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: v1.4.12
        group: com.stakater.platform
        provider: stakater
        version: v1.4.12
        vixens.io/backup-profile: "relaxed"
      annotations:
        vixens.io/service-binding: "false"
        vixens.io/no-long-connections: "true"
    spec:
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
          operator: Exists
      containers:
        - image: ghcr.io/stakater/reloader:v1.4.22
          imagePullPolicy: IfNotPresent
          name: reloader-reloader
          ports:
            - name: http
              containerPort: 9090
          livenessProbe:
            httpGet:
              path: /live
              port: http
            timeoutSeconds: 5
            failureThreshold: 5
            periodSeconds: 10
            successThreshold: 1
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              path: /metrics
              port: http
            timeoutSeconds: 5
            failureThreshold: 5
            periodSeconds: 10
            successThreshold: 1
            initialDelaySeconds: 10
          securityContext:
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /tmp/
              name: tmp-volume
          args:
            - --log-level=info
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 10m
              memory: 128Mi
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: reloader-reloader
      volumes:
        - emptyDir: {}
          name: tmp-volume
