apps/00-infra/reloader/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: reloader-reloader
  namespace: tools
  labels:
    app: reloader-reloader
spec:
  selector:
    app: reloader-reloader
    release: reloader
  ports:
    - name: metrics
      protocol: TCP
      port: 9090
      targetPort: http
