apps/00-infra/reloader/base/cilium-networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: reloader
  namespace: tools
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: reloader
  egress:
    - {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
